# dolphin

./: CMakeLists.txt
Source/Core/Common/: LogManager.h
Source/Core/Common/Logging/: LogManager.h
Source/Core/Core/: Movie.cpp
Source/Core/Core/HW/WiimoteEmu/: EmuSubroutines.cpp  UDPTLayer.h  WiimoteEmu.cpp  WiimoteEmu.h  WiimoteHid.h
Source/Core/Core/HW/WiimoteEmu/Attachment/: Classic.cpp  Nunchuk.cpp
Source/Core/DolphinQt/: CMakeLists.txt  GameList.cpp  ISOFile.cpp  LogWindow.h  MainWindow.cpp  MainWindowEvents.cpp
Source/Core/DolphinQt/Config/: ConfigGeneral.h  ConfigGfx.cpp
Source/Core/DolphinQt/Src/: ISOFile.h  LogWindow.cpp  MainWindow.h  MainWindowEvents.cpp  RenderWindow.cpp  main.cpp
Source/Core/DolphinQt/Src/Config/: ConfigGeneral.cpp
Source/Core/DolphinQt/Src/Util/: Resources.cpp
Source/Core/DolphinQt/Util/: Resources.cpp  Resources.h
Source/Core/DolphinWX/GLInterface/: GLX.cpp
Source/Core/VideoBackends/OGL/: FramebufferManager.cpp  FramebufferManager.h  PostProcessing.cpp  ProgramShaderCache.cpp  ProgramShaderCache.h  RasterFont.cpp  Render.cpp  StreamBuffer.cpp  TextureCache.cpp  TextureConverter.cpp  VertexManager.cpp  VertexManager.h
Source/Core/VideoBackends/Software/: BPMemLoader.cpp  EfbCopy.cpp  HwRasterizer.cpp  HwRasterizer.h  Rasterizer.cpp  SWRenderer.cpp  SWVertexLoader.cpp  Tev.cpp  Tev.h
Source/Core/VideoCommon/: BPMemory.h  LightingShaderGen.h  PixelShaderGen.cpp  PixelShaderGen.h  PixelShaderManager.cpp  PixelShaderManager.h  RenderBase.cpp  TextureCacheBase.cpp  VertexLoader.cpp  VertexLoader.h  VertexShaderGen.cpp  VertexShaderGen.h  VertexShaderManager.cpp  VideoConfig.cpp
Source/Core/VideoCommon/Src/: PixelShaderGen.h  VertexShaderGen.cpp  VertexShaderGen.h  VertexShaderManager.cpp  VertexShaderManager.h
Source/Plugins/Plugin_VideoDX11/Src/: VertexShaderCache.cpp
Source/Plugins/Plugin_VideoOGL/Src/: PixelShaderCache.cpp  ProgramShaderCache.cpp  ProgramShaderCache.h  VertexManager.cpp  VertexShaderCache.cpp
Source/Plugins/Plugin_VideoSoftware/Src/: EfbInterface.cpp
